Configuracion de desarrollo agregada

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=bonvino
+spring.profiles.active=dev
+
+
+# Configura PostgreSQL, pero sin usarla por ahora
+spring.datasource.url=jdbc:postgresql://localhost:5432/yourdbname
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=yourusername
+spring.datasource.password=yourpassword
+
+# Para evitar que Spring Boot intente crear la base de datos en memoria
+spring.datasource.initialization-mode=never
+spring.jpa.hibernate.ddl-auto=none
+
+# Excluir la configuración automática de JPA si no quieres usarla aún
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
+
