se cambia la credencial a la de azure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/bonvino
-spring.datasource.username=root
-spring.datasource.password=35713242Valecf
+spring.datasource.url=jdbc:mysql://ppai-bonvino-diseno.mysql.database.azure.com:3306/bonvino
+spring.datasource.username=adminmartin
+spring.datasource.password=nimda123+
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
